testsuite/gna/bug0144/underscore1.ref
underscore1.vhdl:5:38:error: underscore not allowed at the start of a bit string
  constant v : std_logic_vector := b"_10";
                                     ^
